update: admin's invoice pages responsive UI